--- a/ProiectContoare/appsettings.json
+++ b/ProiectContoare/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProiectContoareContext": "Server=(localdb)\\mssqllocaldb;Database=ProiectContoareContext-0368a240-079b-40f4-9926-78b0914121a3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProiectContoareContext": "Server=(localdb)\\mssqllocaldb;Database=ProiectContoareContext-0368a240-079b-40f4-9926-78b0914121a3;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LibraryIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProiectContoare;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
